k8s/zookeeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: prguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.5.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2181
          volumeMounts:
            - name: zookeeper-data
              mountPath: /var/lib/zookeeper/data
              subPath: data
            - name: zookeeper-data
              mountPath: /var/lib/zookeeper/log
              subPath: log
      volumes:
        - name: zookeeper-data
          persistentVolumeClaim:
            claimName: zookeeper-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: prguard
spec:
  selector:
    app: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
